--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,27 @@
-install below libraries using pip-->
+﻿dash==2.0.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+# Flask==2.0.2
+# Flask-Compress==1.10.1
+# lxml==4.6.4
+# numpy==1.19.5
+# pandas==1.1.5
+plotly==5.4.0
+# scikit-learn==1.0.1
+# gunicorn==20.1.0
+# scipy==1.7.3
+# sklearn==0.0
+# yfinance==0.1.67
 
-dash
-dash-core-components
-dash-html-components
-dash-renderer
-dash-table
-Flask
-Flask-Compress
-gunicorn
-lxml
-numpy
-pandas
-plotly
-scikit-learn
-scipy
-sklearn
-yfinance
+dash-renderer==1.8.2
+Flask==1.1.2
+Flask-Compress==1.5.0
+gunicorn==20.0.4
+lxml==4.5.2
+numpy==1.18.5
+pandas==1.1.2
+scikit-learn==0.23.2
+scipy==1.5.2
+sklearn==0.0
+yfinance==0.1.67
