--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-﻿dash==2.0.0
+dash==2.0.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 Flask==2.0.2
 Flask-Compress==1.10.1
 lxml==4.9.0
-numpy==1.17.4
-pandas==1.3.4
+numpy>=1.17.4
+pandas>=1.3.4
 plotly==5.4.0
 scikit-learn==1.0.1
 gunicorn==20.1.0
 scipy==1.7.2
 sklearn==0.0
-yfinance==0.1.66
+yfinance>=0.1.66
