--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-﻿dash==2.0.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
+﻿dash>=2.0.0
+dash-core-components>=2.0.0
+dash-html-components>=2.0.0
 dash-table==5.0.0
 Flask==2.0.2
 Flask-Compress==1.10.1
